Updated image placeholders

--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -20,7 +20,7 @@
     <div class="admin-wrapper" id="adminContainer">
         <nav class="sidebar" id="sidebar">
             <div class="sidebar-header justify-content-center">
-                <img src="../images/logo.png" alt="AaliyaTrips" class="img-fluid" style="max-height: 50px;">
+                <img src="/images/logo.png" alt="AaliyaTrips" class="img-fluid" style="max-height: 50px;">
             </div>
 
             <div class="sidebar-menu">
