--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
     <nav class="navbar navbar-premium navbar-expand-lg navbar-dark fixed-top py-0">
         <div class="container">
             <a class="navbar-brand fw-bold" href="#">
-                <img src="images/logo.png" alt="Aaliya Trip Planners" height="85">
+                <img src="/images/logo.png" alt="Aaliya Trip Planners" height="85">
             </a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -86,7 +86,7 @@
                     <div class="hero-overlay"></div>
                 </div>
                 <div class="carousel-item h-100">
-                    <img src="images/valparai.jpg" class="d-block w-100 h-100 object-fit-cover"
+                    <img src="/images/valparai.jpg" class="d-block w-100 h-100 object-fit-cover"
                         alt="Valparai Nature Bison">
                     <div class="hero-overlay"></div>
                 </div>
@@ -96,7 +96,7 @@
                     <div class="hero-overlay"></div>
                 </div>
                 <div class="carousel-item h-100">
-                    <img src="images/sheep.jpg" class="d-block w-100 h-100 object-fit-cover" alt="Green Valley">
+                    <img src="/images/sheep.jpg" class="d-block w-100 h-100 object-fit-cover" alt="Green Valley">
                     <div class="hero-overlay"></div>
                 </div>
                 <div class="carousel-item h-100">
@@ -230,7 +230,7 @@
                     <div class="card border-0 shadow-sm h-100 service-card">
                         <div class="row g-0 h-100">
                             <div class="col-md-6">
-                                <img src="images/toyota_innova.png"
+                                <img src="/images/toyota_innova.png"
                                     class="img-fluid rounded-start h-100 object-fit-cover" alt="Luxury Transport">
                             </div>
                             <div class="col-md-6 d-flex align-items-center">
