--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -50,7 +50,7 @@
     <div class="admin-wrapper" id="adminContainer">
         <nav class="sidebar" id="sidebar">
             <div class="sidebar-header justify-content-center">
-                <img src="/images/logo.png" alt="AaliyaTrips" class="img-fluid" style="max-height: 50px;">
+                <img src="../images/logo.png" alt="AaliyaTrips" class="img-fluid" style="max-height: 50px;">
             </div>
 
             <div class="sidebar-menu">
@@ -761,6 +761,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts@3.35.0/dist/apexcharts.min.js"></script>
+    <script src="../js/config.js"></script>
     <script src="../js/admin.js?v=3"></script>
 </body>
 
