--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-premium navbar-expand-lg navbar-dark fixed-top py-0">
         <div class="container">
             <a class="navbar-brand fw-bold" href="#">
-                <img src="/images/logo.png" alt="Aaliya Trip Planners" height="85">
+                <img src="images/logo.png" alt="Aaliya Trip Planners" height="85">
             </a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -60,7 +60,7 @@
                     <div class="hero-overlay"></div>
                 </div>
                 <div class="carousel-item h-100">
-                    <img src="/images/valparai.jpg" class="d-block w-100 h-100 object-fit-cover"
+                    <img src="images/valparai.jpg" class="d-block w-100 h-100 object-fit-cover"
                         alt="Valparai Nature Bison">
                     <div class="hero-overlay"></div>
                 </div>
@@ -70,7 +70,7 @@
                     <div class="hero-overlay"></div>
                 </div>
                 <div class="carousel-item h-100">
-                    <img src="/images/sheep.jpg" class="d-block w-100 h-100 object-fit-cover" alt="Green Valley">
+                    <img src="images/sheep.jpg" class="d-block w-100 h-100 object-fit-cover" alt="Green Valley">
                     <div class="hero-overlay"></div>
                 </div>
                 <div class="carousel-item h-100">
@@ -204,7 +204,7 @@
                     <div class="card border-0 shadow-sm h-100 service-card">
                         <div class="row g-0 h-100">
                             <div class="col-md-6">
-                                <img src="/images/toyota_innova.png"
+                                <img src="images/toyota_innova.png"
                                     class="img-fluid rounded-start h-100 object-fit-cover" alt="Luxury Transport">
                             </div>
                             <div class="col-md-6 d-flex align-items-center">
@@ -502,6 +502,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="js/config.js"></script>
     <script src="js/main.js"></script>
     <script src="js/smooth-scroll.js"></script>
 </body>
