--- a/public/vehicles.html
+++ b/public/vehicles.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-premium navbar-expand-lg navbar-dark fixed-top py-0">
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html">
-                <img src="/images/logo.png" alt="Aaliya Trip Planners" height="85">
+                <img src="images/logo.png" alt="Aaliya Trip Planners" height="85">
             </a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -113,6 +113,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/config.js"></script>
     <script src="js/main.js"></script>
 </body>
 
