--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -568,7 +568,26 @@
                             <input type="hidden" name="image" id="trans-img">
                             <small id="trans-img-file-status"></small>
                         </div>
-                        <button type="submit" class="btn btn-primary-custom w-100">Save Vehicle</button>
+                        <div class="row g-3">
+                            <div class="col-md-6">
+                                <label class="form-label">Daily Rent (₹)</label>
+                                <input type="number" class="form-control" name="dailyRent" id="trans-rent">
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label">A/C Charges (₹)</label>
+                                <input type="number" class="form-control" name="acCharges" id="trans-ac">
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label">Hills Charge (₹)</label>
+                                <input type="number" class="form-control" name="hillsCharges" id="trans-hills">
+                            </div>
+                            <div class="col-12">
+                                <label class="form-label">Additional Info</label>
+                                <textarea class="form-control" name="additionalInfo" id="trans-info" rows="2"
+                                    placeholder="e.g. Driver Beta, Parking, Tollgate info"></textarea>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary-custom w-100 mt-3">Save Vehicle</button>
                     </form>
                 </div>
             </div>
@@ -761,7 +780,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts@3.35.0/dist/apexcharts.min.js"></script>
     <script src="../js/config.js"></script>
-    <script src="../js/admin.js?v=3"></script>
+    <script src="../js/admin.js?v=4"></script>
 </body>
 
 </html>
